# Ctrl-BiteHack-2024

./: .gitignore  Modelfile  README.md  app.json  app.py  chainSetup.py  package-lock.json  package.json  pyproject.toml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/anonymous/twojwnuczek/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
app/: _layout.tsx
app/(tabs)/: _layout.tsx  explore.tsx  index.tsx
ios/: Podfile
ios/twojwnuczek/: Info.plist
ios/twojwnuczek.xcodeproj/: project.pbxproj
ios/twojwnuczek.xcodeproj/xcshareddata/xcschemes/: twojwnuczek.xcscheme
llm/: llamaPrep.py  pyproject.toml
server/: README.md
server/api/: README.md  pyproject.toml
server/api/api/: settings.py
server/api/chat/: urls.py  views.py
server/api/chat/templates/chat/: main.html
server/api/chat/templates/chat/backup/: main.html
server/api/static/backup/css/: main.css
server/api/static/backup/js/: main.js
server/api/static/css/: main.css
server/api/static/js/: buttons.js  main.js  webSpeechApi.js
server/api/static/js/nlp/: README.md  nlp.js  pyproject.toml
server/api/static/js/nlp/nlpModules/: Modelfile  commands.json  modelPrep.py  modelRequest.js
