[tool.poetry]
name = "ctrl-bitehack-2024"
version = "0.1.0"
description = "TwojWnuczek"
authors = ["sand194 <piasekj1602@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.11"
langchain-community = "^0.3.11"
langchain-openai = "^0.2.12"
scikit-learn = "^1.6.0"
chromadb = "^0.5.23"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.33.0"
pillow = "^11.0.0"
ollama = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
